spring/tests/snapshots/snapshots__compiler@goodbye_world.son.snap
---
source: spring/tests/snapshots.rs
info:
  program: spring
  args:
    - tests/input/goodbye_world.son
input_file: spring/tests/input/goodbye_world.son
---
success: true
exit_code: 0
----- stdout -----
Goodbye world!

----- stderr -----
